# translate

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  code.c++  install.sh  setup.py
.jenkins/: README.md  build.sh
docker/jenkins/: Dockerfile  README.md  build.sh  install_prereqs.sh
fbtranslate/: Dictionary.h  average_checkpoints.py  beam_decode.py  char_encoder.py  data.py  dictionary.py  ensemble_export.py  generate.py  multiprocessing_train.py  onnx_component_export.py  onnx_full_export.py  rnn.py  train.py  vocab_reduction.py  word_dropout.py
fbtranslate/cpp/: BatchedBeamSearch.cpp  CMakeLists.txt  DbPredictor.h  Decoder.cpp  DecoderLib.cpp  DecoderLib.h
fbtranslate/examples/: generate_iwslt14.sh  train_iwslt14.sh
fbtranslate/test/: DictionaryTest.cpp  extended_test_onnx.py  test_attention.py  test_average_checkpoints.py  test_beam_decode.py  test_char_encoder.py  test_fairseq_step.py  test_onnx.py  test_train.py  test_vocab_reduction.py  test_vocabulary.py  test_word_dropout.py  utils.py
fbtranslate/vocab/: BPEVocabProcessor.cpp  BPEVocabProcessor.h  BaseVocabProcessor.cpp  BaseVocabProcessor.h  CharNgramVocabProcessor.cpp  CharNgramVocabProcessor.h  Loader.cpp  Loader.h  MorfessorVocabProcessor.cpp  MorfessorVocabProcessor.h  VocabConstants.cpp  VocabConstants.h  WordVocabProcessor.cpp  WordVocabProcessor.h  WordpieceVocabProcessor.cpp  WordpieceVocabProcessor.h
pytorch_translate/: Dictionary.h  average_attention.py  average_checkpoints.py  beam_decode.py  beam_search_and_decode_v2.py  benchmark.py  bleu_significance.py  char_aware_hybrid.py  char_data.py  char_encoder.py  char_rnn_encoder.py  char_source_hybrid.py  char_source_model.py  char_source_transformer_model.py  checkpoint.py  common_layers.py  constants.py  data.py  data_utils.py  dictionary.py  ensemble_export.py  evals.py  file_io.py  generate.py  hybrid_transformer_rnn.py  model_constants.py  multi_model.py  multilingual.py  multilingual_model.py  multilingual_utils.py  multiprocessing_train.py  ngram.py  onnx_component_export.py  onnx_forced_decoder_export.py  onnx_full_export.py  options.py  preprocess.py  pytorch_full_export.py  rescoring.py  rnn.py  (+15 more)
pytorch_translate/attention/: __init__.py  attention_utils.py  base_attention.py  dot_attention.py  mlp_attention.py  multihead_attention.py  no_attention.py  pooling_attention.py
pytorch_translate/cpp/: BatchedBeamSearch.cpp  BatchedBeamSearch.h  CMakeLists.txt  DbPredictor.cpp  DbPredictor.h  Decoder.cpp  DecoderLib.cpp  DecoderLib.h  DecoderUtil.h  Dictionary.cpp  Dictionary.h  test.cpp
pytorch_translate/cpp/cmake/: Summary.cmake
pytorch_translate/data/: char_data.py  data.py  dictionary.py  iterators.py  language_pair_upsampling_dataset.py  masked_lm_dictionary.py  utils.py  weighted_data.py
pytorch_translate/dual_learning/: dual_learning_criterion.py  dual_learning_models.py  dual_learning_task.py
pytorch_translate/examples/: export_iwslt14.sh  export_iwslt14_pytorch.sh  generate_iwslt14.sh  train_iwslt14.sh  train_lm.sh  translate_iwslt14.sh
pytorch_translate/models/: __init__.py  transformer_from_pretrained_xlm.py
pytorch_translate/rescoring/: model_scorers.py  rescorer.py  weights_search.py
pytorch_translate/tasks/: __init__.py  cross_lingual_lm.py  denoising_autoencoder_task.py  knowledge_distillation_task.py  multilingual_task.py  pytorch_translate_multi_task.py  pytorch_translate_task.py  semi_supervised_task.py  translation_from_pretrained_xlm.py  translation_lev_task.py  utils.py
pytorch_translate/test/: extended_test_onnx.py  test_DecoderBatchedStepEnsemble.py  test_attention.py  (+23 more)
translate/: Dictionary.cpp  beam_decode.py  data.py  ensemble_export.py  multiprocessing_train.py  onnx_component_export.py  rnn_cell.py  train.py  vocab_reduction.py  vocabulary.py
(+105 files in other folders)
